--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <section class="AboutMe">
         <h1>Hola soy David</h1>
 
-        <p>Me gusta programar</p>
+        <p>Me gusta programar y comer todo el tiempo</p>
 
         <p>Me gusta el futbol</p>
 
