--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
         <p>Me gusta programar y comer todo el tiempo</p>
 
-        <p>Me gusta el futbol</p>
+        <p>Me gusta el futbol y la natacion</p>
 
         <p>Me gusta el cine</p>
         
